# acp-extension-claude-pty

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE.md  README.md  justfile
.github/scripts/: install-bundled-bwrap.sh  install-musl-build-tools.sh
.github/workflows/: ci.yml  release.yml
docs/: compatibility.md  development.md  editor-setup.md  install.md  publishing.md  real-e2e.md  security.md
docs/compat/: claude-code-capabilities.json
docs/superpowers/specs/: 2026-06-13-next-turn-mode-switch-design.md  2026-06-14-compact-command-pty-timeout-research.md  2026-06-14-mode-switch-pty-timeout-research.md
npm/: README.md  package.json
npm/publish/: create-platform-packages.sh  update-base-package.sh
npm/template/: package.json
npm/testing/: test-platform-detection.js  test-publish-packages.sh  validate.sh
packaging/acp-registry/: agent.json.template
packaging/homebrew/: acp-extension-claude-pty.rb.template  claude-code-cli-acp.rb.template
packaging/zed-extension/: extension.toml.template
script/: debug-acp-compact.py  debug-acp-mode-switch.py  sign-mac  sign-windows.ps1
src/: cli.rs  doctor.rs  error.rs  interactive.rs  lib.rs  main.rs  print_mode.rs
src/acp/: mod.rs  server.rs  updates.rs
src/compat/: claude_probe.rs  docs_probe.rs  mod.rs
src/config/: commands.rs  mod.rs  session.rs  settings.rs
src/pty/: input.rs  session.rs
src/session/: manager.rs
src/terminal/: mod.rs  recognizers.rs  screen.rs
src/transcript/: events.rs  mod.rs  tailer.rs
tests/: acp_handshake.rs  acp_load.rs  acp_prompt_queue.rs  acp_session.rs  available_commands.rs  cli.rs  compat_cli.rs  dynamic_mode_switch.rs  edit_review.rs  permission_modes.rs  plan_updates.rs  print_mode.rs  prompt_conversion.rs  pty_screen.rs  real_e2e.rs  session_config.rs  settings.rs  terminal_updates.rs  tool_updates.rs  transcript_tailer.rs  upstream_drift.rs
tests/fixtures/pty/: permission.ansi
tests/fixtures/transcripts/: session-a.jsonl
