[package]
name = "acp-extension-claude-pty"
version = "0.1.5"
edition = "2024"
rust-version = "1.95"
authors = ["mkh"]
license = "Apache-2.0"
description = "An ACP-compatible adapter for the real Claude Code CLI"
repository = "https://github.com/Leeeon233/acp-extension-claude-pty"
homepage = "https://github.com/Leeeon233/acp-extension-claude-pty"
readme = "README.md"
keywords = ["claude", "claude-code", "acp", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/NOTICE.md",
    "/README.md",
    "/src/**/*.rs",
    "/src/prompts/*.md",
]

[[bin]]
name = "acp-extension-claude-pty"
path = "src/main.rs"

[lib]
doctest = false
name = "acp_extension_claude_pty"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "=0.11.1", features = ["unstable"] }
agent-client-protocol-tokio = "=0.11.1"
anyhow = "1.0.102"
camino = "1.2.2"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
portable-pty = { version = "0.9.0", features = ["serde"] }
regex-lite = "0.1.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
vt100 = "0.16.2"
which = "8.0.2"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = { version = "1.47.2", features = ["json", "redactions"] }
predicates = "3.1.3"
rstest = "0.26.1"
serial_test = "3.4.0"
tempfile = "3.27.0"

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"

[lints.clippy]
print_stdout = "deny"
print_stderr = "deny"
